--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Practice</title>
+    <title>Matrix Refactored</title>
+		<link rel="stylesheet" href="./css/style.css">
   </head>
-
   <body>
-    <div class="root"></div>
 
-    <script src="script.js"></script>
+		
+
+    <script src="./script.js"></script>
   </body>
 </html>
